# project-manager-copilot

./: .dockerignore  .env.example  .env.example.local  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
agent/: .env.example  Dockerfile  __init__.py  __main__.py  cli.py
agent/a2a/: __init__.py  agent_card.py  converters.py  executor.py  server.py
agent/core/: __init__.py  checkpointer.py  config.py  database.py  mcp_client.py  messages.py  models.py  monitoring.py  runner.py  state.py
agent/graphs/: __init__.py  main_graph.py  main_graph_old.py.backup  plan_execute.py
agent/nodes/: __init__.py  ask_project_key.py  checker.py  conversation_router.py  executor.py  plan_executor.py  planner.py  project_detector.py  router.py  simple_chat_response.py  simple_executor.py  simple_react.py  task_router.py  tool_validator.py
agent/prompts/: __init__.py  conversation_classification.py  planner.py  project_detection.py  router.py  task_classification.py  tool_prediction.py
agent/tests/: __init__.py  conftest.py  test_plan_execute.py  test_router.py  test_simple_react.py
agent/tests/core/: __init__.py  test_database.py
agent/utils/: __init__.py  validators.py
auth_service/: Dockerfile  __init__.py  __main__.py  app.py  config.py  database.py  dependencies.py
auth_service/models/: __init__.py  chat_session.py  oauth.py  user.py
auth_service/schemas/: __init__.py  user.py
auth_service/services/: __init__.py  chat_session_service.py  user_manager.py
docs/: FeedBack.md
migrations/: Dockerfile  env.py
migrations/versions/: 001_create_meeting_links.py  a46f779a458d_create_users_and_oauth_accounts_tables.py  b3f4e8c7d2a1_add_chat_sessions_table.py
pm_mcp/: .env.example  Dockerfile  __init__.py  __main__.py  config.py  constants.py  dependencies.py  server.py
pm_mcp/core/: __init__.py  database.py  errors.py  messages.py  metrics.py  models.py  telemetry.py  validation.py
pm_mcp/services/: __init__.py  base.py  calendar_service.py  confluence_service.py  jira_service.py  pm_service.py
pm_mcp/tests/: __init__.py  conftest.py  test_calendar_tools.py  test_confluence_tools.py  test_jira_tools.py  test_pm_tools.py  test_validation.py
pm_mcp/tests/mocks/: __init__.py  mock_services.py
pm_mcp/tools/: __init__.py
pm_mcp/tools/calendar/: __init__.py  models.py  tools.py
pm_mcp/tools/confluence/: __init__.py  models.py  tools.py
pm_mcp/tools/jira/: __init__.py  models.py  tools.py
pm_mcp/tools/pm/: __init__.py  models.py  tools.py
web_chat/: Dockerfile  __init__.py  app.py  config.py  session_manager.py
