[project]
name = "cloudru-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "respx>=0.22.0",
    "ruff>=0.14.8",
]
mcp-server = [
    "asyncpg>=0.31.0",
    "atlassian-python-api>=4.0.7",
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.13.3",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "lxml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
migrations = [
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["pm_mcp/tests"]
env = [
    "ATLASSIAN_API_TOKEN=test-token",
    "ATLASSIAN_EMAIL=test@example.com",
    "JIRA_BASE_URL=https://test.atlassian.net",
    "CONFLUENCE_BASE_URL=https://test.atlassian.net/wiki",
    "POSTGRES_HOST=localhost",
    "POSTGRES_PORT=5432",
    "POSTGRES_DB=test_pm_mcp",
    "POSTGRES_USER=test_user",
    "POSTGRES_PASSWORD=test_password",
    "GOOGLE_CALENDAR_ID=test-calendar-id",
    "GOOGLE_API_KEY=test-api-key",
]
