[project]
name = "cloudru-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
agent = [
    "a2a-sdk>=0.3.20",
    "fastapi>=0.124.0",
    "langchain-core>=1.1.2",
    "langchain-mcp-adapters>=0.2.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-checkpoint-postgres>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "respx>=0.22.0",
    "ruff>=0.14.8",
]
mcp-server = [
    "atlassian-python-api>=4.0.7",
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.13.3",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "lxml>=6.0.2",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
web-chat = [
    "a2a-sdk>=0.3.20",
    "chainlit>=2.9.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
auth = [
    "fastapi-users[sqlalchemy]>=13.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.28.1",
    "fastapi>=0.124.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["pm_mcp/tests", "agent/tests"]
env = [
    "ATLASSIAN_API_TOKEN=test-token",
    "ATLASSIAN_EMAIL=test@example.com",
    "JIRA_BASE_URL=https://test.atlassian.net",
    "CONFLUENCE_BASE_URL=https://test.atlassian.net/wiki",
    "GOOGLE_SERVICE_ACCOUNT_EMAIL=test-sa@test.iam.gserviceaccount.com",
    "GOOGLE_SERVICE_ACCOUNT_KEY_JSON={{\"type\":\"service_account\",\"project_id\":\"test\",\"private_key\":\"test-key\",\"client_email\":\"test@test.iam.gserviceaccount.com\"}}",
]
